Fix icon clipping on info page

--- a/app/assets/stylesheets/models/exercises.css.less
+++ b/app/assets/stylesheets/models/exercises.css.less
@@ -98,6 +98,7 @@ center img {
       text-overflow: ellipsis;
       overflow: hidden;
       white-space: nowrap;
+      padding-top: .3em;
     }
 
     i {
